animation bug on mobile fixed

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,6 +5,7 @@
     background-color: #359FFB;
     display: flex;
     justify-content: center;
+    position: relative;
 }
 .footer-content {
     width: 330px;
