--- a/src/components/WeatherView/WeatherInfo/WeatherInfo.css
+++ b/src/components/WeatherView/WeatherInfo/WeatherInfo.css
@@ -28,6 +28,9 @@
 @media (max-width: 670px) {
     .info-cont {
         margin: 0;
+        position: absolute;
+        top: 125px;
+        width: calc(100% - 20px);
     }
     .info-main {
         width: 100%;
