--- a/src/components/WeatherView/WeatherView.css
+++ b/src/components/WeatherView/WeatherView.css
@@ -9,12 +9,16 @@
 @media (max-width: 670px) {
     .weather-cont {
         width: 100%;
+        height: 1229px;
         padding: 0 10px;
     }
     .tabs-wrapper {
+        width: calc(100% - 20px);
+        position: absolute;
+        top: 0px;
         overflow-x: scroll;
         overflow-y: hidden;
-        height: 125px;
+        height: 130px;
     }
     .tabs-wrapper::-webkit-scrollbar {
         display: none;
